--- a/CSharp/index.html
+++ b/CSharp/index.html
@@ -9,16 +9,15 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <div id="Portada">
+        <a href="../index.html">
+            <div class="frame">
+                <div class="button" onclick="void(0);">Regresar</div>
+            </div>
+        </a>
+        <img class="ImagenRecortada" width="100%" src="Imagenes/CSharp_Logos/Deep.png" alt="Fondo de la imagen">
+    </div>
     <div id="Contanier">
-        <div id="Portada">
-            <a href="../index.html">
-                <div class="frame">
-                    <div class="button" onclick="void(0);">Regresar</div>
-                </div>
-            </a>
-            <img class="ImagenRecortada" width="100%" src="Imagenes/CSharp_Logos/Deep.png" alt="Fondo de la imagen">
-        </div>
-        
         <div id="Inicio">
             <img width="3%" src="Imagenes/CSharp_Logos/C Sharp Icon.png" alt="Logo de la imagen">
             <h2>Como programar en C#</h2>
@@ -38,162 +37,161 @@
             <br>
             <h5>📗 Inicio</h5><br><br>
         </div>
-        
 
         <div class="Clearfix"></div>
 
         <aside id="Barralateral">
             <h2>Bienvenida</h2>
-            <p class="temario">🌎 Bienvenido a "Como programar en C#"</p>
+                <a href=""><p class="temario">🌎 Bienvenido a "Como programar en C#"</p></a>
             <hr><br>
             <h2>C# Introducción</h2>
-            <p class="temario">⛄ Algoritmos y Lógica"</p><br>
-            <p class="temario">🔴 .NET Framework</p><br>
-            <p class="temario">🟢 .NET Core</p><br>
-            <p class="temario">🖥️ Introduccion a Visual Studio</p><br>
-            <p class="temario">⏩ GitHub</p><br>
-            <p class="temario">👋🏻 Hola mundo</p><br>
-            <p class="temario">🔢 Variables</p><br>
-            <p class="temario">🎆 Tipos de datos</p><br>
-            <p class="temario">🧑🏻‍🔧 Operadores</p><br>
-            <p class="temario">🔑 Palabras claves</p><br>
-            <p class="temario">🏸 Acrónimos</p><br>
+                <a href=""><p class="temario">⛄ Algoritmos y Lógica"</p><br></a>
+                <a href=""><p class="temario">🔴 .NET Framework</p><br></a>
+                <a href=""><p class="temario">🟢 .NET Core</p><br></a>
+                <a href=""><p class="temario">🖥️ Introduccion a Visual Studio</p><br></a>
+                <a href=""><p class="temario">⏩ GitHub</p><br></a>
+                <a href=""><p class="temario">👋🏻 Hola mundo</p><br></a>
+                <a href=""><p class="temario">🔢 Variables</p><br></a>
+                <a href=""><p class="temario">🎆 Tipos de datos</p><br></a>
+                <a href=""><p class="temario">🧑🏻‍🔧 Operadores</p><br></a>
+                <a href=""><p class="temario">🔑 Palabras claves</p><br></a>
+                <a href=""><p class="temario">🏸 Acrónimos</p><br></a>
             <hr><br>
             <h2>C# Contro Statement</h2>
-            <p class="temario">✅ If - Else</p><br>
-            <p class="temario">🚦 Switch</p><br>
-            <p class="temario">🔁 For Loop</p><br>
-            <p class="temario">🔁 While Loop</p><br>
-            <p class="temario">🔁 Do While Loop</p><br>
-            <p class="temario">🎨 Foreach</p><br>
-            <p class="temario">💔 Break</p><br>
-            <p class="temario">⏸️ Continue</p><br>
-            <p class="temario">📎 Goto</p><br>
-            <p class="temario">🔠 Comments</p><br>
+                <a href=""><p class="temario">✅ If - Else</p><br></a>
+                <a href=""><p class="temario">🚦 Switch</p><br></a>
+                <a href=""><p class="temario">🔁 For Loop</p><br></a>
+                <a href=""><p class="temario">🔁 While Loop</p><br></a>
+                <a href=""><p class="temario">🔁 Do While Loop</p><br></a>
+                <a href=""><p class="temario">🎨 Foreach</p><br></a>
+                <a href=""><p class="temario">💔 Break</p><br></a>
+                <a href=""><p class="temario">⏸️ Continue</p><br></a>
+                <a href=""><p class="temario">📎 Goto</p><br></a>
+                <a href=""><p class="temario">🔠 Comments</p><br></a>
             <hr><br>
             <h2>C# Function</h2>
-            <p class="temario">⚙️ Functions</p><br>
-            <p class="temario">📱 Call by Value</p><br>
-            <p class="temario">🍽️ Call by eferens</p><br>
-            <p class="temario">🕹️ Out Parament</p><br>
+                <a href=""><p class="temario">⚙️ Functions</p><br></a>
+                <a href=""><p class="temario">📱 Call by Value</p><br></a>
+                <a href=""><p class="temario">🍽️ Call by eferens</p><br></a>
+                <a href=""><p class="temario">🕹️ Out Parament</p><br></a>
             <hr><br>
             <h2>C# Arrays</h2>
-            <p class="temario">🪬 Arrys</p><br>
-            <p class="temario">🀄 Arrays to function</p><br>
-            <p class="temario">🌌 Multidimencional Arrays</p><br>
-            <p class="temario">🏈 Jagged Arrays</p><br>
-            <p class="temario">👞 Params</p><br>
-            <p class="temario">🎑 Array Class</p><br>
-            <p class="temario">🧿 Command line Args</p><br>
+                <a href=""><p class="temario">🪬 Arrys</p><br></a>
+                <a href=""><p class="temario">🀄 Arrays to function</p><br></a>
+                <a href=""><p class="temario">🌌 Multidimencional Arrays</p><br></a>
+                <a href=""><p class="temario">🏈 Jagged Arrays</p><br></a>
+                <a href=""><p class="temario">👞 Params</p><br></a>
+                <a href=""><p class="temario">🎑 Array Class</p><br></a>
+                <a href=""><p class="temario">🧿 Command line Args</p><br></a>
             <hr><br>
             <h2>C# Object Class</h2>
-            <p class="temario">📓 Objects and Class</p><br>
-            <p class="temario">🦺 Constructor</p><br>
-            <p class="temario">🧨 Destructor</p><br>
-            <p class="temario">🫳🏻 This</p><br>
-            <p class="temario">⚡ Static</p><br>
-            <p class="temario">🌩️ Static Class</p><br>
-            <p class="temario">⛈️ Static Constructor</p><br>
-            <p class="temario">🌃 Struct</p><br>
-            <p class="temario">🏟️ Enum</p><br>
+                <a href=""><p class="temario">📓 Objects and Class</p><br></a>
+                <a href=""><p class="temario">🦺 Constructor</p><br></a>
+                <a href=""><p class="temario">🧨 Destructor</p><br></a>
+                <a href=""><p class="temario">🫳🏻 This</p><br></a>
+                <a href=""><p class="temario">⚡ Static</p><br></a>
+                <a href=""><p class="temario">🌩️ Static Class</p><br></a>
+                <a href=""><p class="temario">⛈️ Static Constructor</p><br></a>
+                <a href=""><p class="temario">🌃 Struct</p><br></a>
+                <a href=""><p class="temario">🏟️ Enum</p><br></a>
             <hr><br>
-            <h2>C# Properties</h2>
-            <p class="temario">🎏 Properties</p><br>
+            <h2>C# Properties</h><br>
+                <a href=""><p class="temario">🎏 Properties</p><br></a>
             <hr><br>
             <h2>C# Inheritance</h2>
-            <p class="temario">🏐 Inheritance</p><br>
-            <p class="temario">🌞 Aggregation</p><br>
+                <a href=""><p class="temario">🏐 Inheritance</p><br></a>
+                <a href=""><p class="temario">🌞 Aggregation</p><br></a>
             <hr><br>
             <h2>C# Polymorphism</h2>
-            <p class="temario">🎣 Member Overloading</p><br>
-            <p class="temario">📪 Method Overloading</p><br>
-            <p class="temario">⚾ Base</p><br>
-            <p class="temario">🦋 Polymorphism</p><br>
-            <p class="temario">🔒 Sealed</p><br>
+                <a href=""><p class="temario">🎣 Member Overloading</p><br></a>
+                <a href=""><p class="temario">📪 Method Overloading</p><br></a>
+                <a href=""><p class="temario">⚾ Base</p><br></a>
+                <a href=""><p class="temario">🦋 Polymorphism</p><br></a>
+                <a href=""><p class="temario">🔒 Sealed</p><br></a>
             <hr><br>
             <h2>C# Abstraction</h2>
-            <p class="temario">🛏️ Abstract</p><br>
-            <p class="temario">🛂 Interface</p><br>
+                <a href=""><p class="temario">🛏️ Abstract</p><br></a>
+                <a href=""><p class="temario">🛂 Interface</p><br></a>
             <hr><br>
             <h2>C# Namespace</h2>
-            <p class="temario">🚥 Namespaces</p><br>
-            <p class="temario">🏅 Acces Modifiers</p><br>
-            <p class="temario">💊 Encapsulation</p><br>
+                <a href=""><p class="temario">🚥 Namespaces</p><br></a>
+                <a href=""><p class="temario">🏅 Acces Modifiers</p><br></a>
+                <a href=""><p class="temario">💊 Encapsulation</p><br></a>
             <hr><br>
             <h2>C# String</h2>
-            <p class="temario">🏆 String</p><br>
+                <a href=""><p class="temario">🏆 String</p><br></a>
             <hr><br>
             <h2>C# Exception Handling</h2>
-            <p class="temario">💳 Exception Handling</p><br>
-            <p class="temario">🏪 Try/Catch</p><br>
-            <p class="temario">🔚 Finally</p><br>
-            <p class="temario">🎭 Custom Exception</p><br>
-            <p class="temario">🎴 Checked Unchecked</p><br>
-            <p class="temario">🚨 System Exception</p><br>
+                <a href=""><p class="temario">💳 Exception Handling</p><br></a>
+                <a href=""><p class="temario">🏪 Try/Catch</p><br></a>
+                <a href=""><p class="temario">🔚 Finally</p><br></a>
+                <a href=""><p class="temario">🎭 Custom Exception</p><br></a>
+                <a href=""><p class="temario">🎴 Checked Unchecked</p><br></a>
+                <a href=""><p class="temario">🚨 System Exception</p><br></a>
             <hr><br>
             <h2>C# File IO</h2>
-            <p class="temario">📝 FileStream</p><br>
-            <p class="temario">📝 StreamWriter</p><br>
-            <p class="temario">📝 StreamReader</p><br>
-            <p class="temario">📝 TextWriter</p><br>
-            <p class="temario">📝 TextReader</p><br>
-            <p class="temario">📝 BinaryWriter</p><br>
-            <p class="temario">📝 BinaryReader</p><br>
-            <p class="temario">📝 StringWriter</p><br>
-            <p class="temario">📝 StringReader</p><br>
-            <p class="temario">📄 FileInfo</p><br>
-            <p class="temario">📄 DirectoryInfo</p><br>
-            <p class="temario">📘 Serialization</p><br>
-            <p class="temario">📕Deserialization</p><br>
-            <p class="temario">🎊 System.IO</p><br>
+                <a href=""><p class="temario">📝 FileStream</p><br></a>
+                <a href=""><p class="temario">📝 StreamWriter</p><br></a>
+                <a href=""><p class="temario">📝 StreamReader</p><br></a>
+                <a href=""><p class="temario">📝 TextWriter</p><br></a>
+                <a href=""><p class="temario">📝 TextReader</p><br></a>
+                <a href=""><p class="temario">📝 BinaryWriter</p><br></a>
+                <a href=""><p class="temario">📝 BinaryReader</p><br></a>
+                <a href=""><p class="temario">📝 StringWriter</p><br></a>
+                <a href=""><p class="temario">📝 StringReader</p><br></a>
+                <a href=""><p class="temario">📄 FileInfo</p><br></a>
+                <a href=""><p class="temario">📄 DirectoryInfo</p><br></a>
+                <a href=""><p class="temario">📘 Serialization</p><br></a>
+                <a href=""><p class="temario">📕Deserialization</p><br></a>
+                <a href=""><p class="temario">🎊 System.IO</p><br></a>
             <hr><br>
             <h2>C# Collections</h2>
-            <p class="temario">🔖 Collections</p><br>
-            <p class="temario">🪄 List&lt;T&gt;</p><br>
-            <p class="temario">🪪 HashSet&lt;T&gt;</p><br>
-            <p class="temario">🛢️ SortedSet&lt;T&gt;</p><br>
-            <p class="temario">🔋 Stack&lt;T&gt;</p><br>
-            <p class="temario">⚽ Queue&lt;T&gt;</p><br>
-            <p class="temario">🏫 LinkedList&lt;T&gt;</p><br>
-            <p class="temario">📖 Dictonary&lt;K,V&gt;</p><br>
-            <p class="temario">🎀 SortedDictionary&lt;K,V&gt;</p><br>
-            <p class="temario">⚖️ SortedList&lt;K,V&gt;</p><br>
+                <a href=""><p class="temario">🔖 Collections</p><br></a>
+                <a href=""><p class="temario">🪄 List&lt;T&gt;</p><br></a>
+                <a href=""><p class="temario">🪪 HashSet&lt;T&gt;</p><br></a>
+                <a href=""><p class="temario">🛢️ SortedSet&lt;T&gt;</p><br></a>
+                <a href=""><p class="temario">🔋 Stack&lt;T&gt;</p><br></a>
+                <a href=""><p class="temario">⚽ Queue&lt;T&gt;</p><br></a>
+                <a href=""><p class="temario">🏫 LinkedList&lt;T&gt;</p><br></a>
+                <a href=""><p class="temario">📖 Dictonary&lt;K,V&gt;</p><br></a>
+                <a href=""><p class="temario">🎀 SortedDictionary&lt;K,V&gt;</p><br></a>
+                <a href=""><p class="temario">⚖️ SortedList&lt;K,V&gt;</p><br></a>
             <hr><br>
             <h2>C# Sorting Algorithm</h2>
-            <p class="temario">🎫 Sorting Algorithm</p><br>
+                <a href=""><p class="temario">🎫 Sorting Algorithm</p><br></a>
             <hr><br>
             <h2>C# Generics</h2>
-            <p class="temario">🌆 Generics</p><br>
+                <a href=""><p class="temario">🌆 Generics</p><br></a>
             <hr><br>
             <h2>C# Delegates</h2>
-            <p class="temario">🛋️ Delegates</p><br>
+                <a href=""><p class="temario">🛋️ Delegates</p><br></a>
             <hr><br>
             <h2>C# Reflection</h2>
-            <p class="temario">🖨️ Reflection</p><br>
+                <a href=""><p class="temario">🖨️ Reflection</p><br></a>
             <hr><br>
             <h2>C# Anonymous Function</h2>
-            <p class="temario">🕵🏻‍♀️ Anonymous Function</p><br>
+                <a href=""><p class="temario">🕵🏻‍♀️ Anonymous Function</p><br></a>
             <hr><br>
-            <h2>C# Multithreading</h2>
-            <p class="temario">🏢 Multithreading</p><br>
-            <p class="temario">🏸 Tread Life Class</p><br>
-            <p class="temario">🛸 Tread Class</p><br>
-            <p class="temario">⚾ Main Tread</p><br>
-            <p class="temario">🎖️ Tread Example</p><br>
-            <p class="temario">🎍 Tread Sleep</p><br>
-            <p class="temario">🎰 Tread Abort</p><br>
-            <p class="temario">🎟️ Tread Join</p><br>
-            <p class="temario">📷 Tread Name</p><br>
-            <p class="temario">🎳 Tread Priority</p><br>
+            <h2>C# Multithreading</h><br>
+                <a href=""><p class="temario">🏢 Multithreading</p><br></a>
+                <a href=""><p class="temario">🏸 Tread Life Class</p><br></a>
+                <a href=""><p class="temario">🛸 Tread Class</p><br></a>
+                <a href=""><p class="temario">⚾ Main Tread</p><br></a>
+                <a href=""><p class="temario">🎖️ Tread Example</p><br></a>
+                <a href=""><p class="temario">🎍 Tread Sleep</p><br></a>
+                <a href=""><p class="temario">🎰 Tread Abort</p><br></a>
+                <a href=""><p class="temario">🎟️ Tread Join</p><br></a>
+                <a href=""><p class="temario">📷 Tread Name</p><br></a>
+                <a href=""><p class="temario">🎳 Tread Priority</p><br></a>
             <hr><br>
-            <h2>C# Synchronization</h2>
-            <p class="temario">🔄️ Synchronization</p><br>
+            <h2>C# Synchronization</h><br>
+                <a href=""><p class="temario">🔄️ Synchronization</p><br></a>
             <hr><br>
             <h2>C# Web Service</h2>
-            <p class="temario">🌐 Web Service</p><br>
+                <a href=""><p class="temario">🌐 Web Service</p><br></a>
             <hr><br>
             <h2>C# Extras</h2>
-            <p class="temario">🧹 Clean Code</p><br>
+                <a href=""><p class="temario">🧹 Clean Code</p><br></a>
             <hr><br>
         </aside>
 
