--- a/CSharp/index.html
+++ b/CSharp/index.html
@@ -196,33 +196,74 @@
         </aside>
 
         <section id="Contenido">
-            <h5>📚 Temas</h5>
-            <hr>
-            <article class="article">
-                <h4>Hola</h4>
-                <p>Como estan</p>
-                <hr>
-            </article>
-            <article class="article">
-                <h4>Hola</h4>
-                <p>Como estan</p>
-                <hr>
-            </article>
-            <article class="article">
-                <h4>Hola</h4>
-                <p>Como estan</p>
-                <hr>
-            </article>
-            <article class="article">
-                <h4>Hola</h4>
-                <p>Como estan</p>
-                <hr>
-            </article>
-            <article class="article">
-                <h4>Hola</h4>
-                <p>Como estan</p>
-                <hr>
-            </article>
+            <h5>📚 Temas</h5><hr><br>
+            <h3>Bienvenida</h3><hr>
+                <div class="card-container">
+                    <div class="card">
+                        <img src="Imagenes/CSharp_Bienvenida/1.png" alt="Imagen">
+                        <div class="card-content">
+                            <h5>🌎 Bienvenido a "Como programar en C#"</h5>
+                            <p>Israel Moncada</p>
+                            <p>Bienvenida</p>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <img src="Imagenes/CSharp_Bienvenida/1.png" alt="Imagen">
+                        <div class="card-content">
+                            <h5>🌎 Bienvenido a "Como programar en C#"</h5>
+                            <p>Israel Moncada</p>
+                            <p>Bienvenida</p>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <img src="Imagenes/CSharp_Bienvenida/1.png" alt="Imagen">
+                        <div class="card-content">
+                            <h5>🌎 Bienvenido a "Como programar en C#"</h5>
+                            <p>Israel Moncada</p>
+                            <p>Bienvenida</p>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <img src="Imagenes/CSharp_Bienvenida/1.png" alt="Imagen">
+                        <div class="card-content">
+                            <h5>🌎 Bienvenido a "Como programar en C#"</h5>
+                            <p>Israel Moncada</p>
+                            <p>Bienvenida</p>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <img src="Imagenes/CSharp_Bienvenida/1.png" alt="Imagen">
+                        <div class="card-content">
+                            <h5>🌎 Bienvenido a "Como programar en C#"</h5>
+                            <p>Israel Moncada</p>
+                            <p>Bienvenida</p>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <img src="Imagenes/CSharp_Bienvenida/1.png" alt="Imagen">
+                        <div class="card-content">
+                            <h5>🌎 Bienvenido a "Como programar en C#"</h5>
+                            <p>Israel Moncada</p>
+                            <p>Bienvenida</p>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <img src="Imagenes/CSharp_Bienvenida/1.png" alt="Imagen">
+                        <div class="card-content">
+                            <h5>🌎 Bienvenido a "Como programar en C#"</h5>
+                            <p>Israel Moncada</p>
+                            <p>Bienvenida</p>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <img src="Imagenes/CSharp_Bienvenida/1.png" alt="Imagen">
+                        <div class="card-content">
+                            <h5>🌎 Bienvenido a "Como programar en C#"</h5>
+                            <p>Israel Moncada</p>
+                            <p>Bienvenida</p>
+                        </div>
+                    </div>
+                </div>
         </section>
 
         <div class="Clearfix"></div>
